--- a/app/src/main/res/layout/activity_new_insurance.xml
+++ b/app/src/main/res/layout/activity_new_insurance.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="stoyanov.valentin.mycar.activities.MainActivity">
+    tools:context="stoyanov.valentin.mycar.activities.NewInsuranceActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -13,24 +13,22 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_main"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
+
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/content_new_insurance" />
 
-    <io.github.yavski.fabspeeddial.FabSpeedDial
-        android:id="@+id/fab_speed_dial"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        app:fabGravity="bottom_end"
-        app:fabMenu="@menu/fab_speed_dial_menu"
-        app:miniFabBackgroundTint="@color/colorPrimaryLight"
-        app:miniFabDrawableTint="@color/colorAccent"
-        app:miniFabTitleTextColor="@color/colorAccent"
-        app:miniFabTitleBackgroundTint="@color/colorPrimaryLight"/>
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_dialog_email" />
+
 </android.support.design.widget.CoordinatorLayout>
