AddActivities UI content

--- a/app/src/main/res/layout/content_new_service.xml
+++ b/app/src/main/res/layout/content_new_service.xml
@@ -13,4 +13,8 @@
     tools:context="stoyanov.valentin.mycar.activities.NewServiceActivity"
     tools:showIn="@layout/activity_new_service">
 
+    <!--
+    maybe listview
+    -->
+
 </RelativeLayout>
