--- a/app/src/main/res/layout/fragment_my_list.xml
+++ b/app/src/main/res/layout/fragment_my_list.xml
@@ -2,11 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="stoyanov.valentin.mycar.fragments.MyListFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_list_fragment"
-        android:scrollbars="vertical"
+    <co.moonmonkeylabs.realmrecyclerview.RealmRecyclerView
+        android:id="@+id/realm_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:rrvLayoutType="LinearLayout"
+        app:rrvSwipeToDelete="true"
+        />
 </FrameLayout>
