--- a/app/src/main/res/layout/content_new_vehicle.xml
+++ b/app/src/main/res/layout/content_new_vehicle.xml
@@ -17,49 +17,103 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <EditText
-        android:id="@+id/et_new_vehicle_name"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_vehicle_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:inputType="textCapSentences"
+            android:maxLength="32"
+            android:maxLines="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/car_name"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_vehicle_brand"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <AutoCompleteTextView
+            android:inputType="textCapCharacters|textAutoComplete"
+            android:maxLength="32"
+            android:maxLines="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/car_brand" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_vehicle_model"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <AutoCompleteTextView
+            android:inputType="textCapCharacters|textAutoComplete"
+            android:maxLength="32"
+            android:maxLines="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/car_model" />
+    </android.support.design.widget.TextInputLayout>
+
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_vehicle_odometer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:inputType="number"
+            android:maxLines="1"
+            android:maxLength="16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/odometer"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_vehicle_horse_power"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:inputType="number"
+            android:maxLines="1"
+            android:maxLength="4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/horse_power" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_vehicle_cubic_centimeters"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:inputType="number"
+            android:maxLines="1"
+            android:maxLength="8"
+            android:id="@+id/et_new_vehicle_cc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/cubic_centimeters" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/car_name" />
-
-    <AutoCompleteTextView
-        android:id="@+id/actv_new_vehicle_brand"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/car_brand" />
-
-    <AutoCompleteTextView
-        android:id="@+id/actv_new_vehicle_model"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/car_model" />
-
-    <EditText
-        android:id="@+id/et_new_vehicle_odometer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/odometer" />
-
-    <EditText
-        android:id="@+id/et_new_vehicle_hp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/horse_power" />
-
-    <EditText
-        android:id="@+id/et_new_vehicle_cc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/cubic_centimeters" />
-
-    <EditText
-        android:id="@+id/et_new_vehicle_manifacture_date"
-        android:focusable="false"
-        android:cursorVisible="false"
-        android:hint="@string/manifacture_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:id="@+id/til_new_vehicle_manufacture_date">
+        <android.support.design.widget.TextInputEditText
+            android:focusable="false"
+            android:cursorVisible="false"
+            android:hint="@string/manifacture_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </android.support.design.widget.TextInputLayout>
 
     <LinearLayout
         android:gravity="center_horizontal"
@@ -67,110 +121,77 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_gravity="center_vertical"
-            android:text="@string/color"/>
+
+        <EditText
+            android:focusable="false"
+            android:cursorVisible="false"
+            android:id="@+id/et_vehicle_color"
+            android:onClick="colorPicker"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
 
         <View
             android:layout_marginStart="@dimen/activity_vertical_margin"
             android:id="@+id/view_new_vehicle_color"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
+            android:onClick="colorPicker"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="40dp"
             android:background="@drawable/shape_vehicle_color"/>
     </LinearLayout>
-<!--
-    <ListView
-        android:id="@+id/lv_fuel_tanks"
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_new_fuel_tank"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-        -->
 
-    <ToggleButton
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:textOn="@string/one_fuel_tank"
-        android:textOff="@string/two_fuel_tanks"
-        android:checked="false"
+    <Button
+        android:id="@+id/btn_new_vehicle_add_ft"
+        android:background="@color/colorAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tbtn_additional_fuel_tank" />
+        android:text="@string/add_fuel_tank"/>
 
-    <Spinner
-        android:id="@+id/spn_new_vehicle_fuel_tank_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <LinearLayout
-        android:orientation="horizontal"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_vehicle_registration_plate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/et_new_vehicle_fuel_tank_capacity"
-            android:hint="@string/capacity"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-
-        <EditText
-            android:id="@+id/et_new_vehicle_fuel_tank_consumption"
-            android:hint="@string/consumption"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_new_vehicle_second_fuel_tank"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone">
-
-        <Spinner
-            android:id="@+id/spn_new_vehicle_second_fuel_tank_type"
+        <android.support.design.widget.TextInputEditText
+            android:inputType="textCapCharacters|number"
+            android:maxLength="16"
+            android:maxLines="1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:hint="@string/registration_plate"/>
+    </android.support.design.widget.TextInputLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_vehicle_vin_plate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:inputType="textCapCharacters|number"
+            android:maxLength="16"
+            android:maxLines="1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:hint="@string/vin_plate"/>
+    </android.support.design.widget.TextInputLayout>
 
-            <EditText
-                android:id="@+id/et_new_vehicle_second_fuel_tank_capacity"
-                android:hint="@string/capacity"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-
-            <EditText
-                android:id="@+id/et_new_vehicle_second_fuel_tank_consumption"
-                android:hint="@string/consumption"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <EditText
-        android:id="@+id/et_new_vehicle_registration_plate"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_vehicle_notes"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/registration_plate"/>
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/et_new_vehicle_vin_plate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/vin_plate"/>
-
-    <EditText
-        android:id="@+id/et_new_vehicle_notes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/notes"/>
+        <android.support.design.widget.TextInputEditText
+            android:inputType="textMultiLine"
+            android:maxLines="16"
+            android:maxLength="256"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/notes"/>
+    </android.support.design.widget.TextInputLayout>
 </LinearLayout>
