--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,11 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <!--Intro slider dimes-->
+    <dimen name="views_height">30dp</dimen>
+    <dimen name="views_margin_bottom">20dp</dimen>
+    <dimen name="slide_title">30sp</dimen>
+    <dimen name="slide_text">16sp</dimen>
+    <dimen name="text_padding">40dp</dimen>
+    <dimen name="img_size">120dp</dimen>
 </resources>
