--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -20,9 +20,15 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true" />
 
+    <ProgressBar
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/pb_realm_seeding"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
     <LinearLayout
         android:id="@+id/ll_welcome_views"
-        android:layout_above="@id/btn_welcome_next"
+        android:layout_above="@+id/btn_welcome_next"
         android:layout_width="match_parent"
         android:layout_height="@dimen/views_height">
         <View
