--- a/app/src/main/res/layout/row_new_fuel_tank.xml
+++ b/app/src/main/res/layout/row_new_fuel_tank.xml
@@ -1,18 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
+    android:id="@+id/ll_row_new_fuel_tank"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <Spinner
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:hint="@string/fuel_capacity"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"/>
+        <TextView
+            android:textStyle="bold"
+            android:id="@+id/tv_row_ft_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_row_ft_fuel_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_row_ft_capacity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_row_ft_consumption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/img_btn_remove"
+        android:layout_gravity="center_vertical"
+        android:background="@null"
+        android:src="@drawable/ic_clear_black_24dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp" />
 </LinearLayout>
