List cars in cardviews

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,6 @@
     <dimen name="slide_text">16sp</dimen>
     <dimen name="text_padding">40dp</dimen>
     <dimen name="img_size">120dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
