--- a/app/src/main/res/layout/row_vehicles_recycler_view.xml
+++ b/app/src/main/res/layout/row_vehicles_recycler_view.xml
@@ -1,57 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/activity_vertical_margin">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorAccent"/>
-
-    <ImageView
-        android:id="@+id/imgv_row_vehicle"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_centerVertical="true"
-        android:src="@drawable/ic_menu_car"/>
-
-    <LinearLayout
-        android:layout_toEndOf="@+id/imgv_row_vehicle"
-        android:orientation="vertical"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content">
-
-        <TextView
-            android:id="@+id/tv_row_vehicle_name"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content" />
+    <android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    android:layout_gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    card_view:cardCornerRadius="2dp"
+    card_view:cardBackgroundColor="@color/cardview_light_background"
+    card_view:cardElevation="2dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:id="@+id/rl_cardview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_centerInParent="true"
+                    android:id="@+id/imgv_recyclerview_vehicle_type"
+                    android:scaleType="fitXY"
+                    android:layout_width="@dimen/img_size"
+                    android:layout_height="@dimen/img_size"
+                    android:tint="@color/colorTextIcons"
+                    android:src="@drawable/ic_menu_car" />
+            </RelativeLayout>
 
             <TextView
-                android:id="@+id/tv_row_vehicle_brand"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"/>
+                android:paddingTop="24dp"
+                android:paddingStart="16dp"
+                android:textColor="@color/colorPrimaryText"
+                android:id="@+id/tv_recyclerview_name"
+                android:textSize="24sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/tv_row_vehicle_model"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"/>
+                android:paddingStart="16dp"
+                android:textColor="@color/colorSecondaryText"
+                android:id="@+id/tv_recyclerview_brand_model"
+                android:textSize="14sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
+            <TextView
+                android:paddingStart="16dp"
+                android:id="@+id/tv_recyclerview_manufacture_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+            <LinearLayout
+                android:paddingTop="16dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:gravity="end"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:textColor="@color/colorAccent"
+                    android:id="@+id/btn_recyclerview_delete"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/delete"/>
+
+                <Button
+                    android:textColor="@color/colorAccent"
+                    android:id="@+id/btn_recyclerview_open"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/open"/>
+            </LinearLayout>
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_row_vehicle_manufacture_date"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
-    </LinearLayout>
-</RelativeLayout>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
