--- a/app/src/main/res/layout/activity_view_vehicle.xml
+++ b/app/src/main/res/layout/activity_view_vehicle.xml
@@ -23,7 +23,7 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="center_horizontal|top"
                 app:srcCompat="@drawable/ic_car_black"
                 android:tint="@color/colorTextIcons"
                 android:id="@+id/imgv_view_vehicle_type"
