--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,4 +12,5 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="stoyanov.valentin.mycar.activities.MainActivity"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_main" />
+    tools:showIn="@layout/app_bar_main">
+</FrameLayout>
