--- a/app/src/main/res/layout/dialog_new_fuel_tank.xml
+++ b/app/src/main/res/layout/dialog_new_fuel_tank.xml
@@ -44,7 +44,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:gravity="end"
+        android:layout_gravity="end"
         android:id="@+id/btn_dialog_new_ft_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
