--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -24,7 +24,7 @@
                 android:layout_gravity="end"
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:popupBackground="@color/colorAccent"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"/>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
