--- a/app/src/main/res/layout/content_new_expense.xml
+++ b/app/src/main/res/layout/content_new_expense.xml
@@ -14,47 +14,96 @@
     tools:context="stoyanov.valentin.mycar.activities.NewExpenseActivity"
     tools:showIn="@layout/activity_new_expense">
 
-    <EditText
-        android:id="@+id/et_new_expense_date"
-        android:focusable="false"
-        android:cursorVisible="false"
-        android:hint="@string/date"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_new_expense_date"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputEditText
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:hint="@string/date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_new_expense_time"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputEditText
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:hint="@string/time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_expense_odometer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:inputType="number"
+            android:maxLines="1"
+            android:maxLength="16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/odometer"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tv_new_expense_last_odometer"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <EditText
-        android:id="@+id/et_new_expense_notification_date"
-        android:focusable="false"
-        android:cursorVisible="false"
-        android:hint="@string/notification_date"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_expense_type"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/et_new_expense_odometer"
-        android:hint="@string/odometer"
+        <AutoCompleteTextView
+            android:id="@+id/actv_new_expense_type"
+            android:hint="@string/expense_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_expense_price"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
 
-    <Spinner
-        android:id="@+id/spn_new_expense_type"
+        <android.support.design.widget.TextInputEditText
+            android:inputType="number"
+            android:maxLines="1"
+            android:maxLength="16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/price"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_expense_notes"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/et_new_expense_price"
-        android:hint="@string/price"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <!--
-        location picker maybe
-    -->
-
-    <EditText
-        android:id="@+id/et_new_expense_notes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/notes"/>
+        <android.support.design.widget.TextInputEditText
+            android:inputType="textMultiLine"
+            android:maxLines="16"
+            android:maxLength="256"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/notes"/>
+    </android.support.design.widget.TextInputLayout>
 </LinearLayout>
 
