--- a/app/src/main/res/layout/content_new_insurance.xml
+++ b/app/src/main/res/layout/content_new_insurance.xml
@@ -14,43 +14,115 @@
     tools:context="stoyanov.valentin.mycar.activities.NewInsuranceActivity"
     tools:showIn="@layout/activity_new_insurance">
 
-    <EditText
-        android:id="@+id/et_new_insurance_date"
-        android:focusable="false"
-        android:cursorVisible="false"
-        android:hint="@string/date"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_new_insurance_date"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputEditText
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:hint="@string/date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_new_insurance_time"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputEditText
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:hint="@string/time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_new_insurance_expiration_date"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputEditText
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:hint="@string/date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_new_insurance_expiration_time"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputEditText
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:hint="@string/time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_insurance_odometer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:inputType="number"
+            android:maxLines="1"
+            android:maxLength="16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/odometer"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tv_new_insurance_last_odometer"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <EditText
-        android:id="@+id/et_new_insurance_expiration_date"
-        android:focusable="false"
-        android:cursorVisible="false"
-        android:hint="@string/expiration_date"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_insurance_price"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/et_new_insurance_company_name"
-        android:hint="@string/company_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <android.support.design.widget.TextInputEditText
+            android:inputType="number"
+            android:maxLines="1"
+            android:maxLength="16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/price"/>
+    </android.support.design.widget.TextInputLayout>
 
-    <EditText
-        android:id="@+id/et_new_insurance_odometer"
-        android:hint="@string/odometer"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_insurance_notes"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/et_new_insurance_price"
-        android:hint="@string/price"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <EditText
-        android:id="@+id/et_new_expense_notes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/notes"/>
+        <android.support.design.widget.TextInputEditText
+            android:inputType="textMultiLine"
+            android:maxLines="16"
+            android:maxLength="256"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/notes"/>
+    </android.support.design.widget.TextInputLayout>
 </LinearLayout>
