--- a/app/src/main/res/layout/content_new_refueling.xml
+++ b/app/src/main/res/layout/content_new_refueling.xml
@@ -14,62 +14,120 @@
     tools:context="stoyanov.valentin.mycar.activities.NewRefuelingActivity"
     tools:showIn="@layout/activity_new_refueling">
 
-    <EditText
-        android:id="@+id/et_new_ref_date"
-        android:focusable="false"
-        android:cursorVisible="false"
-        android:hint="@string/date"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
 
-    <AutoCompleteTextView
-        android:id="@+id/actv_new_ref_gas_station_name"
-        android:hint="@string/gas_station_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_new_refueling_date"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputEditText
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:hint="@string/date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
 
-    <EditText
-        android:id="@+id/et_new_ref_odometer"
-        android:hint="@string/odometer"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_new_refueling_time"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputEditText
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:hint="@string/time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
+
+    <Spinner
+        android:id="@+id/spn_new_refueling_fuel_tanks"
+        android:popupBackground="@color/colorAccent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_refueling_odometer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:inputType="number"
+            android:maxLines="1"
+            android:maxLength="16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/odometer"/>
+    </android.support.design.widget.TextInputLayout>
 
     <TextView
-        android:id="@+id/tv_new_ref_fuel_type"
-        android:text="Fuel Type"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_new_refueling_last_odometer"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <TextView
+            android:text="@string/full_fuel_tank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-        <EditText
-            android:id="@+id/et_new_ref_fuel_price"
-            android:hint="@string/price"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-
-        <EditText
-            android:id="@+id/et_new_ref_total_cost"
-            android:hint="@string/total_cost"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-
-        <EditText
-            android:id="@+id/et_new_ref_quantity"
-            android:hint="Quantity"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+        <ToggleButton
+            android:id="@+id/toggle_btn_new_refueling_full_ft"
+            android:textOn="@string/yes"
+            android:textOff="@string/no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/et_new_expense_notes"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_refueling_quantity"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/notes"/>
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:hint="@string/quantity"
+            android:inputType="number"
+            android:maxLines="1"
+            android:maxLength="16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_refueling_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:inputType="number"
+            android:maxLines="1"
+            android:maxLength="16"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/price"/>
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_new_refueling_notes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:inputType="textMultiLine"
+            android:maxLines="16"
+            android:maxLength="256"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/notes"/>
+    </android.support.design.widget.TextInputLayout>
 </LinearLayout>
